# deep-research-agent

./: .coveragerc  .env.example  .gitignore  README.md  plan.md  pyproject.toml  pytest.ini
.claude/: settings.local.json
examples/: 01_simple_chain.py  02_conditional_routing.py  03_state_management.py  README.md  test_graph.py
research_assistant/: config.py  main.py
research_assistant/agents/: __init__.py  analyzer.py  base.py  reporter.py  scraper.py  searcher.py
research_assistant/graph/: __init__.py  graph.py  nodes.py  state.py
research_assistant/models/: source.py
research_assistant/tools/: scraper.py  search.py  vector_store.py
research_assistant/utils/: html_generator.py  llm.py  prompts.py
tests/: conftest.py
tests/fixtures/html_samples/: article_good.html  article_minimal.html  article_no_content.html
tests/integration/: conftest.py  test_full_pipeline.py  test_graph_workflow.py
tests/mocks/: mock_chroma.py  mock_ddgs.py  mock_embedder.py  mock_newspaper.py  mock_requests.py
tests/unit/: conftest.py
tests/unit/graph/: conftest.py  test_nodes.py  test_state.py
tests/unit/tools/: conftest.py  test_scraper.py  test_search.py  test_vector_store.py
tests/unit/utils/: test_html_generator.py
tests/utils/: assertions.py  factories.py
